--- a/pages/products/fastener.template
+++ b/pages/products/fastener.template
@@ -1,3 +1,159 @@
 <app-layout>
-    <h1>В разработке</h1>
+    <section class="fastener">
+        <div class="fastener__container">
+            <h2 class="fastener__title">Крепеж</h2>
+            <div class="fastener__description">
+                <p class="fastener__text">
+                    Ввиду того, что для увеличения срока эксплуатации конструкционных элементов 
+                    изготовленных на основе  решетчатого настила 
+                    (смотровые площадки, переходы, ступени) подвергают горячему цинкованию, 
+                    их монтаж производится без применения сварки, 
+                    чтобы не повредить цинковое покрытие защищающее настил от коррозии. 
+                    Кроме этого, монтаж настилов при помощи болтовых соединений 
+                    и саморезов облегчает как монтаж,так и демонтаж, 
+                    что существенно сокращает время строительных работ.
+                </p>
+            </div>
+            <table class="fastener__table">
+                <caption class="fastener__subtitle">Наиболее частые в использовании виды крепежа:</caption>
+                <tr>
+                    <td><strong>1</strong></td>
+                    <td><strong>Универсальный скрепитель, оцинкованный</strong>
+                        <img
+                        class="fastener__img"
+                        src="/fastenerpage0.jpeg"
+                        width="350"
+                        height="350"
+                        alt="чертеж крепежа"
+                        />
+                    </td>
+                    <td>Болт М8, квадратная гайка, верхняя прижимная скоба, прижимная планка.
+                        Не повреждает поверхность металлоконструкций, может неоднократно использоваться
+                         при повторном монтаже.
+                         Применяется на объектах, где возможна вибрация.</td>
+                </tr>
+                <tr>
+                    <td><strong>2</strong></td>
+                    <td><strong>Стандартное крепление, оцинкованное</strong>
+                        <img
+                    class="fastener__img"
+                    src="/fastenerpage.jpeg"
+                    width="350"
+                    height="350"
+                    alt="чертеж крепежа"
+                    />
+                    </td>
+                    <td>(скобка + саморез 6,3х51 со сверлом)
+                        Обеспечивает легкий и быстрый монтаж.
+                        Самый распространенный в использовании, наиболее дешевый вид крепежа</td>
+                </tr>
+                <tr>
+                    <td><strong>3</strong></td>
+                    <td><strong>Двойное крепление, оцинкованное</strong>
+                        <img
+                        class="fastener__img"
+                        src="/fastenerpage2.jpeg"
+                        width="350"
+                        height="350"
+                        alt="чертеж крепежа"
+                        />
+                    </td>
+                    <td>(верхняя часть скобка -2 шт. + болт М8х60 - 2 шт. + нижняя часть - прижимная планка + гайка М8-2 шт.)
+                        Обеспечивает эффективность при монтаже настила на большой высоте и где возможен сдвиг конструкции.
+                         Данный вид крепежа предназначен для соединения настила между собой, 
+                         обеспечивая при этом однородную стабильную поверхность.</td>
+                </tr>
+                <tr>
+                    <td><strong>4</strong></td>
+                    <td><strong>Крюковой крепеж</strong>
+                        <img
+                        class="fastener__img"
+                        src="/fastenerpage3.jpeg"
+                        width="350"
+                        height="350"
+                        alt="чертеж крепежа"
+                        />
+                    </td>
+                    <td>Верхняя прижимная скоба, крюк с приваренной к нему гайкой, болт М8
+                        Такой крепеж нужен, чтобы крепить настилы к опоре.</td>
+                </tr>
+            </table>
+            <!-- <h3>Наиболее частые в использовании виды крепежа:</h3>
+            <ul class="fastener__list3">
+                <li>
+                    <strong>Универсальный скрепитель, оцинкованный</strong>   
+                    <img
+                    class="fastener__img"
+                    src="/fastenerpage0.jpeg"
+                    width="350"
+                    height="350"
+                    alt="чертеж крепежа"
+                    />
+                    <p>Болт М8, квадратная гайка, верхняя прижимная скоба, прижимная планка.
+                        Не повреждает поверхность металлоконструкций, может неоднократно использоваться при повторном монтаже. Применяется на объектах, где возможна вибрация.
+                        </p>
+                </li>
+                <li>
+                    <strong>Стандартное крепление, оцинкованное</strong>
+                    <img
+                    class="fastener__img"
+                    src="/fastenerpage.jpeg"
+                    width="350"
+                    height="350"
+                    alt="чертеж крепежа"
+                    />
+                    <p>
+                        (скобка + саморез 6,3х51 со сверлом)
+                        Обеспечивает легкий и быстрый монтаж.
+                        Самый распространенный в использовании, наиболее дешевый вид крепежа
+                    </p>
+                </li>
+                <li>
+                    <strong>Двойное крепление, оцинкованное</strong>
+                    <img
+                    class="fastener__img"
+                    src="/fastenerpage2.jpeg"
+                    width="350"
+                    height="350"
+                    alt="чертеж крепежа"
+                    />
+                    <p>
+                        (верхняя часть скобка -2 шт. + болт М8х60 - 2 шт. + нижняя часть - прижимная планка + гайка М8-2 шт.)
+Обеспечивает эффективность при монтаже настила на большой высоте и где возможен сдвиг конструкции. Данный вид крепежа предназначен для соединения настила между собой, обеспечивая при этом однородную стабильную поверхность.
+
+                    </p>
+                </li>
+                <li>
+                    <strong>Крюковой крепеж </strong>
+                    <img
+                    class="fastener__img"
+                    src="/fastenerpage3.jpeg"
+                    width="350"
+                    height="350"
+                    alt="чертеж крепежа"
+                    />
+                    <p>
+                        Верхняя прижимная скоба, крюк с приваренной к нему гайкой, болт М8
+                        Такой крепеж нужен, чтобы крепить настилы к опоре.
+                    </p>
+                </li>
+            </ul> -->
+            <div class="fastener__choice fastener__subtitle ">
+                <ul>Выбирая способ крепления, учитывайте:
+                    <li class="fastener__text_marker">
+                        Толщину металла.
+                    </li>
+                    <li class="fastener__text_marker">
+                        Условия эксплуатации.
+                    </li>
+                    <li class="fastener__text_marker">
+                        Сложность монтажных и демонтажных работ.
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+
+    </section>
+    
 </app-layout>
