--- a/pages/products/steps.template
+++ b/pages/products/steps.template
@@ -1,3 +1,104 @@
 <app-layout>
-    <h1>В разработке</h1>
+    <section class="steps">
+        <div class="steps__container">
+            <h2 class="steps__title">Ступени</h2>
+            <div class="steps__description">
+                <p class="steps__text">
+                    <strong>Ступени из настила </strong>— это полностью готовый конструктивный элемент, позволяющий
+собрать лестницу нужных параметров быстро и максимально эффективно. Производство
+ступеней основано на тех же технологиях, что и производство сварного, и
+прессованного настила с их параметрами – размерами, несущей способностью, весом,
+покрытием и противоскольжением. В России производство ступеней из решетчатого настила (
+сварного или прессованного ) не регламентируется, поэтому производители используют
+
+немецкий стандарт производства DIN 24531-1-2006. Особую форму и размеры имеет
+обрамление ступеней из решетчатого настила для возможности быстрого монтажа.
+                </p>
+            </div>
+            <img
+            class="steps__img"
+            src="/forpagesteps.jpg"
+            width="600"
+            height="500"
+            alt="чертеж ступеней"
+            />
+            <ul>
+                <li class="steps__text_marker">
+                    Решетчатый настил
+                </li>
+                <li class="steps__text_marker">
+                    Боковые пластины 
+                    с вырезами под крепление на косоуры
+                </li>
+                <li class="steps__text_marker">
+                    Кант противоскольжения
+                </li>
+                <li class="steps__text_marker">
+                    Отбортовочная пластина (по требованию заказчика)
+                </li>
+            </ul>
+            <p class="steps__text">
+                К ступеням предъявляются более высокие требования безопасности,
+                 чем к решеткам, поэтому они всегда изготавливаются 
+                 с кантом противоскольжения для большей безопасности передвижения. 
+                 Боковые пластины имеют единый типоразмер и 
+                 предусматривают крепление ступеней к косоурам лестниц 
+                 на болтовое соединение.
+            </p>
+            <img
+            class="steps__img"
+            src="/tablitsaforsteps.jpeg"
+            width="600"
+            height="500"
+            alt="фото ступеней"
+            />
+            <div class="textForTable">
+                <ul class="steps__tableDescription">
+                    Пояснения к таблице:
+                    <li>
+                        1. Вес ступеней теоретический
+                    </li>
+                    <li>
+                        2. N - однократная предельная нагрузка в кг
+                    </li>
+                    <li>
+                        3. L - длина ступени, мм, может быть изменена по заказу
+                    </li>
+                    <li>
+                        4. * - размеры несущей полосы: высота х толщина, мм, может быть изменена по заказу
+                    </li>
+                </ul>
+            </div>
+            <h3>Преимущество ступеней из решетчатого настила:</h3>
+            <ul>
+                <li class="steps__text_marker">
+                    Простота монтажа
+                </li>
+                <li class="steps__text_marker">
+                    Долговечность
+                </li>
+                <li class="steps__text_marker">
+                    Высокая влаго и светопроницаемость
+                </li>
+            </ul>
+            <div class="steps__photos">
+                <img
+                class="steps__img"
+                src="/stepspicture.jpeg"
+                width="500"
+                height="500"
+                alt="фото ступеней"
+                />
+                <img
+                class="steps__img"
+                src="/public/stepspicture1.jpeg"
+                width="500"
+                height="500"
+                alt="фото ступеней"
+                />
+
+            </div>
+        
+        </div>
+    </section>
 </app-layout>
