--- a/pages/services/delivery.template
+++ b/pages/services/delivery.template
@@ -7,16 +7,17 @@
           class="servicesBlock__description servicesBlock__description_delivery"
         >
           <li class="servicesBlock__description_marker">
-            Наша компания осуществляет доставку по всей территории РФ.
+            Наша компания осуществляет доставку по всей территории РФ 
+            автомобильном и железнодорожным транспортом.
           </li>
           <li class="servicesBlock__description_marker">
             Стоимость доставки в Коммерческом предложении указывается отдельно
-            от стоимости продукции
+            от стоимости продукции.
           </li>
           <li class="servicesBlock__description_marker">
             При наличии собственного транспорта Вы можете забрать продукцию на
             условиях самовывоза с нашего производства находящегося по адресу:
-            Калужская область, п. Льва Толстого, улица
+            Калужская область, п. Льва Толстого, улица.
           </li>
         </ul>
         <!-- <img
