--- a/pages/services/project.template
+++ b/pages/services/project.template
@@ -10,6 +10,24 @@
             Стоимость услуги входит в стоимость продукции, <br />
             если заказ на решетчатый настил Вы размещаете в нашей компании.
           </li>
+          <li class="servicesBlock__description_marker">
+            Разрабатываем техническую документацию и <br />
+            предлагаем услугу доставки авто и ж/д транспортом 
+            для Вашего удобства!
+          </li>
+          <li class="servicesBlock__description_marker">
+            <strong>Маркировка продукции</strong> <br />
+            При окончательной комплектации заказов на каждое изделие вешаем бирку, <br />
+            на которой указаны: заказчик, место поставки изделия, кодировка изделия в соответствии с КМД.
+            <br />Это снижает риск потери изделий и упрощает будущий монтаж.            
+          </li>
+          <li class="servicesBlock__description_marker">
+            Комплектация крепежом <br />
+            Комплектуем заказы крепежом, подбирая их в соответствии с типом и профилем несущей опоры <br />
+            Так как сами настилы крепятся без применения сварочной техники и сверления.<br />
+            Наша компания комплектует Ваши заказы специальным крепежом.
+
+          </li>
         </ul>
       </div>
     </div>
