--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "postcss-preset-env": "^9.5.2",
     "prettier": "^3.2.5",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-vercel": "^9.0.3"
   },
   "dependencies": {
     "lit": "^3.1.3",
